...
                        ),
                        SocialBlock(
                          socialInfos: [
                            SocialEntry(
                              // svgPath: 'assets/svgs/twitter.svg',
                              icon: JamIcons.twitch,
                              link: 'https://www.twitch.tv/Kounex',
                              linkText: 'Twitch',
                            ),
                          ],
                        ),
                        const BaseDivider(),
                        const Padding(
...
